--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Varsity | Contact</title>
+    <title>Lumbini Academic College | Contact</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/lumbini.svg" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
@@ -50,11 +50,11 @@
                                 <div class="mu-header-top-left">
                                     <div class="mu-top-email">
                                         <i class="fa fa-envelope"></i>
-                                        <span>info@markups.io</span>
+                                        <span>lumbiniacademy@gmail.com</span>
                                     </div>
                                     <div class="mu-top-phone">
                                         <i class="fa fa-phone"></i>
-                                        <span>(568) 986 652</span>
+                                        <span>(+977) 01-5210385</span>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +92,9 @@
           </button>
                     <!-- LOGO -->
                     <!-- TEXT BASED LOGO -->
-                    <a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Varsity</span></a>
+                    <a class="navbar-brand" href="index.html">
+                        <img style="height: 60px; width: 60px; margin-top: -15px !important;" src="assets/img/lumbini1.png">
+                    </a>
                     <!-- IMG BASED LOGO  -->
                     <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
                 </div>
@@ -115,7 +117,7 @@
                             </ul>
                         </li>
                         <li class="active"><a href="contact.html">Contact</a></li>
-                        <li><a href="404.html">404 Page</a></li>
+                        <!-- <li><a href="404.html">404 Page</a></li> -->
                         <li><a href="#" id="mu-search-icon"><i class="fa fa-search"></i></a></li>
                     </ul>
                 </div>
@@ -277,7 +279,7 @@
         <div class="mu-footer-bottom">
             <div class="container">
                 <div class="mu-footer-bottom-area">
-                    <p>&copy; All Right Reserved Lumbini Academic College. Designed by <a style="color: rgb(69, 69, 161);" href="http://www.umeshthapa12.github.io/ewumesh" rel="nofollow">ewumesh</a></p>
+                    <p>&copy; All Right Reserved Lumbini Academic College. Designed by <a href="http://www.umeshthapa12.github.io/ewumesh" rel="nofollow">ewumesh</a></p>
                 </div>
             </div>
         </div>
