--- a/index.html
+++ b/index.html
@@ -817,10 +817,10 @@
                             <div class="mu-footer-widget">
                                 <h4>Contact</h4>
                                 <address>
-                  <p>P.O. Box 320, Ross, California 9495, USA</p>
-                  <p>Phone: (415) 453-1568 </p>
-                  <p>Website: www.markups.io</p>
-                  <p>Email: info@markups.io</p>
+                  <p>Boudhanath Sadak, Kathmandu 44600</p>
+                  <p>Phone: (+977) 01-5210385 </p>
+                  <p>Website: www.laf.edu.np/</p>
+                  <p>Email:  lumbiniacademy@gmail.com</p>
                 </address>
                             </div>
                         </div>
@@ -833,7 +833,7 @@
         <div class="mu-footer-bottom">
             <div class="container">
                 <div class="mu-footer-bottom-area">
-                    <p>&copy; All Right Reserved. Designed by <a href="http://www.markups.io/" rel="nofollow">MarkUps.io</a></p>
+                    <p>&copy; All Right Reserved Lumbini Academic College. Designed by <a href="http://www.umeshthapa12.github.io/ewumesh" rel="nofollow">ewumesh</a></p>
                 </div>
             </div>
         </div>
