--- a/course.html
+++ b/course.html
@@ -57,11 +57,11 @@
                                 <div class="mu-header-top-left">
                                     <div class="mu-top-email">
                                         <i class="fa fa-envelope"></i>
-                                        <span>info@markups.io</span>
+                                        <span>lumbiniacademy@gmail.com</span>
                                     </div>
                                     <div class="mu-top-phone">
                                         <i class="fa fa-phone"></i>
-                                        <span>(568) 986 652</span>
+                                        <span>(+977) 01-5210385</span>
                                     </div>
                                 </div>
                             </div>
@@ -69,11 +69,11 @@
                                 <div class="mu-header-top-right">
                                     <nav>
                                         <ul class="mu-top-social-nav">
-                                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-youtube"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-facebook"></span></a></li>
+                                            <li><a href="https://www.twitter.com/lumbiniacademiccollege/"><span class="fa fa-twitter"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-google-plus"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-linkedin"></span></a></li>
+                                            <li><a href="https://www.youtube.com/lumbiniacademiccollege/"><span class="fa fa-youtube"></span></a></li>
                                         </ul>
                                     </nav>
                                 </div>
