--- a/gallery.html
+++ b/gallery.html
@@ -61,11 +61,11 @@
                                 <div class="mu-header-top-right">
                                     <nav>
                                         <ul class="mu-top-social-nav">
-                                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                                            <li><a href="#"><span class="fa fa-youtube"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-facebook"></span></a></li>
+                                            <li><a href="https://www.twitter.com/lumbiniacademiccollege/"><span class="fa fa-twitter"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-google-plus"></span></a></li>
+                                            <li><a href="https://www.facebook.com/lumbiniacademiccollege/"><span class="fa fa-linkedin"></span></a></li>
+                                            <li><a href="https://www.youtube.com/lumbiniacademiccollege/"><span class="fa fa-youtube"></span></a></li>
                                         </ul>
                                     </nav>
                                 </div>
